* Update to schema version 841
* Update to schema version 789
* Update to schema version 727
* Still return the stylesheet in XslFile even when the regex doesn't match
* Update to schema version 653
* Update to schema version 637
* Rename examples/config.rb to examples/config.template.rb [Bernd Ustorf]

== Version 0.12.0 (July 5, 2009)

* Update for release 0.12.0
* Update to schema version 607
* Update to schema version 603
* Remove support for deprecated calls requiring the username and password
* Make the add_item example more fully featured
* Lock onto Money v1.7.1 as Money v2.0.0 has an issue with == and non-money objects. Add a test to detect the condition
* Update to schema version 591
* Support SetReturnURL GetReturnURL GetRuName FetchToken that require a username and password
* Don't cache the HTTP connection
* Update schema to version 569
* Remove requirement of flexmock
* Remove dependency of project on ActiveSupport and update Rakefile for release 0.11.0
* Remove dependency on ActiveSupport from TimeNode
* Update to eBay XML Schema Version 531
* Fix the money node to add the item amount as a float in dollars
* Update to eBay XML Schema Version 529
* Update to eBay XML Schema Version 517
* Update the end_item example to include the ending reason
* Update the Rakefile to include the examples, set version 0.10.2
* Update to eBay XML Schema Version 513
* Ensure that nil values aren't used as headers in the HTTP request
* Update to eBay XML Schema Version 511
* Tweak modification to xsl stylesheets
* Add an example for get_search_results with pagination
* Release 0.10.0
* Update the documentation for better navigation.  Provide links to official documentation. Don't use method_missing anymore
* Add eBay documentation from the schema into the RDoc.  Generate method calls for all API calls so they are documented
* Update to Schema version 503