@@ -2,7 +2,7 @@
 #
 # * Simple and easy to use Ruby implementation.
 # * Ability to return a raw response for calls that return an extremely large response such as GetCategoriesRequest.
-# * Up-to-date with the eBay API version 841
+# * Up-to-date with the eBay API version 857
 # * Months of usage in a production environment.
 # * Support for Platform Notifications baked right in.
 # 
