@@ -20,6 +20,7 @@ module Ebay # :nodoc:
     #  boolean_node :show_global_shipping_program_preference, 'ShowGlobalShippingProgramPreference', 'true', 'false', :optional => true
     #  boolean_node :show_dispatch_cutoff_time_preferences, 'ShowDispatchCutoffTimePreferences', 'true', 'false', :optional => true
     #  boolean_node :show_global_shipping_program_listing_preference, 'ShowGlobalShippingProgramListingPreference', 'true', 'false', :optional => true
+    #  boolean_node :show_override_gsp_service_with_intl_service_preference, 'ShowOverrideGSPServiceWithIntlServicePreference', 'true', 'false', :optional => true
     class GetUserPreferences < Abstract
       include XML::Mapping
       include Initializer
@@ -42,6 +43,7 @@ module Ebay # :nodoc:
       boolean_node :show_global_shipping_program_preference, 'ShowGlobalShippingProgramPreference', 'true', 'false', :optional => true
       boolean_node :show_dispatch_cutoff_time_preferences, 'ShowDispatchCutoffTimePreferences', 'true', 'false', :optional => true
       boolean_node :show_global_shipping_program_listing_preference, 'ShowGlobalShippingProgramListingPreference', 'true', 'false', :optional => true
+      boolean_node :show_override_gsp_service_with_intl_service_preference, 'ShowOverrideGSPServiceWithIntlServicePreference', 'true', 'false', :optional => true
     end
   end
 end
