@@ -24,6 +24,7 @@ module Ebay # :nodoc:
     #  boolean_node :seller_third_party_checkout_disabled, 'SellerThirdPartyCheckoutDisabled', 'true', 'false', :optional => true
     #  object_node :dispatch_cutoff_time_preference, 'DispatchCutoffTimePreference', :class => DispatchCutoffTimePreferences, :optional => true
     #  boolean_node :global_shipping_program_listing_preference, 'GlobalShippingProgramListingPreference', 'true', 'false', :optional => true
+    #  boolean_node :override_gs_pservice_with_intl_service, 'OverrideGSPserviceWithIntlService', 'true', 'false', :optional => true
     class SetUserPreferences < Abstract
       include XML::Mapping
       include Initializer
@@ -41,6 +42,7 @@ module Ebay # :nodoc:
       boolean_node :seller_third_party_checkout_disabled, 'SellerThirdPartyCheckoutDisabled', 'true', 'false', :optional => true
       object_node :dispatch_cutoff_time_preference, 'DispatchCutoffTimePreference', :class => DispatchCutoffTimePreferences, :optional => true
       boolean_node :global_shipping_program_listing_preference, 'GlobalShippingProgramListingPreference', 'true', 'false', :optional => true
+      boolean_node :override_gs_pservice_with_intl_service, 'OverrideGSPserviceWithIntlService', 'true', 'false', :optional => true
     end
   end
 end
