@@ -54,6 +54,7 @@ require 'ebay/types/buyer_protection_source_code'
 require 'ebay/types/buyer_satisfaction_status_code'
 require 'ebay/types/calculated_shipping_charge_option_code'
 require 'ebay/types/calculated_shipping_rate_option_code'
+require 'ebay/types/cancel_reason_code'
 require 'ebay/types/category_feature_detail_level_code'
 require 'ebay/types/characteristics_search_code'
 require 'ebay/types/charity_affiliation_type_code'
@@ -257,6 +258,7 @@ require 'ebay/types/shipping_rate_type_code'
 require 'ebay/types/shipping_region_code'
 require 'ebay/types/shipping_service_code'
 require 'ebay/types/shipping_service'
+require 'ebay/types/shipping_tracking_event_code'
 require 'ebay/types/shipping_type_code'
 require 'ebay/types/simple_item_sort_code'
 require 'ebay/types/site_code'
