@@ -1,0 +1,11 @@
+module Ebay # :nodoc:
+  module Types # :nodoc:
+    class ShippingTrackingEventCode
+      extend Enumerable
+      extend Enumeration
+      ValetReadyForPickup = 'ValetReadyForPickup'
+      ValetPickedUpOrder = 'ValetPickedUpOrder'
+    end
+  end
+end
+
